fix navbar z-index and change video head 1

--- a/src/assets/site/scss/blk-design-system-pro/sections/_headers.scss
+++ b/src/assets/site/scss/blk-design-system-pro/sections/_headers.scss
@@ -182,7 +182,7 @@
 
 .header-4 {
   .navbar {
-    z-index: 2;
+    z-index: 2000;
     position: absolute;
   }
 
